--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/TESTE_A.TESTE_A
+EditorStartupMap=/Game/VRTemplate/Maps/Jogo_final_A.Jogo_final_A
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -137,7 +137,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/TESTE_A.TESTE_A
+GameDefaultMap=/Game/VRTemplate/Maps/Jogo_final_A.Jogo_final_A
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
