--- a/MyProject.uproject
+++ b/MyProject.uproject
@@ -27,6 +27,22 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "ChaosClothEditor",
+			"Enabled": false
+		},
+		{
+			"Name": "ChaosCloth",
+			"Enabled": false
+		},
+		{
+			"Name": "ChaosNiagara",
+			"Enabled": false
+		},
+		{
+			"Name": "ChaosUserDataPT",
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
